--- a/src/components/CharacterEditor/CharacterEditor.module.css
+++ b/src/components/CharacterEditor/CharacterEditor.module.css
@@ -4,10 +4,12 @@
 }
 
 .maxWidthWrapper {
+  position: relative;
 }
 
 .header {
   padding-bottom: 64px;
+  max-width: 65%;
 }
 
 .title {
@@ -23,8 +25,63 @@
   margin: 0;
 }
 
+.characterPerspective {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 40%;
+  background-color: hsl(195deg, 20%, 86%);
+}
+
 .characterWrapper {
+  position: fixed;
+  top: 15%;
+  left: 60%;
+  bottom: 5%;
+  min-height: 500px;
 }
 
 .controlColumn {
+  max-width: 50%;
+}
+
+.mobileHeader {
+  position: sticky;
+  display: none;
+  left: 32px;
+}
+
+@media screen and (max-width: 1024px) {
+  .mobileHeader {
+    display: block;
+  }
+
+  .desktopHeader {
+    display: none;
+  }
+
+  .characterEditor {
+    overflow: auto;
+  }
+
+  .header {
+    padding-bottom: 500px;
+    margin-top: -628px;
+  }
+
+  .characterWrapper {
+    position: sticky;
+    top: 500px;
+    left: 0;
+    width: 100%;
+    max-width: 400px;
+  }
+
+  .controlColumn {
+    white-space: nowrap;
+    max-width: unset;
+    margin: 0 -32px;
+    padding: 0 32px;
+  }
 }
