--- a/src/components/ToggleButton/ToggleButton.module.css
+++ b/src/components/ToggleButton/ToggleButton.module.css
@@ -8,6 +8,7 @@
   outline-offset: 2px;
   border-radius: 1px;
   cursor: pointer;
+  padding: 0;
 
   /*
     HACK: Margin on an outer bound like this is
